--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -25,6 +25,8 @@ gap: 50px;
 }
 .footer-links li{
     cursor: pointer;
+    text-decoration: none;
+    list-style: none;
 
 }
 .footer-social-icon{
@@ -57,3 +59,13 @@ border:1 px solid#ebebeb;
     background-color: #c7c7c7;
 }
 
+.footer-icons-container {
+    margin: 0 10px;
+    display: inline-block;
+    transition: transform 0.2s ease;
+  }
+  
+  .footer-icons-container a:hover {
+    transform: scale(1.2);
+  }
+  
