--- a/src/Components/Offer/Offer.css
+++ b/src/Components/Offer/Offer.css
@@ -4,6 +4,7 @@ height:60vh;
 display: flex;
 margin: auto;
 padding: 25px 140px;
+margin-top: 100px;
 margin-bottom: 250px;
 background:linear-gradient(180deg,#fde1ff 0%,#e1ffea22 60%);
 border:2px solid red;
@@ -50,4 +51,36 @@ align-items: center;
     height:100%;
     margin-left: 200px;
  
+}
+
+
+
+
+
+
+
+
+
+
+.offer-input-container {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.email-input {
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+  flex: 1;
+}
+
+.offers-left button {
+  padding: 10px 20px;
+  background-color: #ff6f61;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
 }
